--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
 
-.walrus-showing {
-  display: none;
-}
-
 .clickable {
   cursor: pointer;
   color: #0088cc;
@@ -16,11 +12,13 @@
   width: 150px;
   height: 200px;
   background-color: lightskyblue;
+  text-align: center;
 }
 
 .boxback {
   width: 150px;
   height: 200px;
   background-color: lightgray;
+  text-align: center;
   display: none;
 }
