second card functioning

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,18 @@
   text-align: center;
   display: none;
 }
+
+.cardfront02 {
+  width: 150px;
+  height: 200px;
+  background-color: lightskyblue;
+  text-align: center;
+}
+
+.cardback02 {
+  width: 150px;
+  height: 200px;
+  background-color: lightgray;
+  text-align: center;
+  display: none;
+}
